# filemagic-rs

./: .bumpversion.cfg  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  compile_all.sh
src/: api.rs  flags.rs  lib.rs  macros.rs  tests.rs  version.rs
