[package]
name = "filemagic"
description = "libmagic bindings"
readme = "README.md"
license = "MIT"
keywords = ["magic", "binding", "file", "filemagic", "libmagic"]
categories = ["api-bindings"]
repository = "https://github.com/marirs/filemagic-rs"
homepage = "https://github.com/marirs/filemagic-rs"
authors = [
    "MARIRS <marirs@gmail.com>",
    "robo9k <robo@9k.lv>",
]
version = "0.12.3"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[badges]
travis-ci = { repository = "marirs/filemagic-rs" }

[lib]
name = "filemagic"

[dependencies]
bitflags = "1.2.1"
libc = "0.2.81"

[dev-dependencies]
regex = "1.4.2"

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = false
debug = false
opt-level = 3
lto = true
