[package]
name = "filemagic"
description = "libmagic bindings"
readme = "README.md"
license = "MIT"
keywords = ["magic", "binding", "file", "filemagic", "libmagic"]
categories = ["api-bindings"]
repository = "https://github.com/marirs/filemagic-rs"
homepage = "https://github.com/marirs/filemagic-rs"
authors = [
    "MARIRS <marirs@gmail.com>",
    "robo9k <robo@9k.lv>",
]
version = "0.13.1"
exclude = [
    ".gitignore",
    ".travis.yml",
]
edition = "2021"

[badges]
travis-ci = { repository = "marirs/filemagic-rs" }

[lib]
name = "filemagic"

[dependencies]
bitflags = "2"
libc = { version = "0.2", default-features = false }

[dev-dependencies]
regex = "1.4.2"

[features]
default = ["pkg-config", "vcpkg"]
v5-45 = []
vendored = ["cc", "v5-45"]

[build-dependencies]
pkg-config = { version = "0.3.27", optional = true }
vcpkg = { version = "0.2.15", optional = true }
cc = { version = "1.1.28", optional = true }

[profile.dev]
opt-level = 3

[profile.release]
debug-assertions = false
debug = false
opt-level = 3
lto = true
